# to-file-like-obj

./: LICENSE  README.md  pyproject.toml  test_to_file_like_obj.py
.github/workflows/: test.yml  typing.yml
to_file_like_obj/: __init__.py
